<package>
  <name>xbot_gazebo</name>
  <version>3.2.3</version>
  <description>Gazebo launchers and worlds for XBot simulation</description>
  <maintainer email="wangpeng@droid.ac.cn">Roc</maintainer>
  <author email="chuanxu@iscas.ac.cn">Chuanxu An</author>
  <license>BSD</license>
  <url type="repository">https://github.com//DroidAITech/xbot_simulator</url>
  <url type="bugtracker">https://github.com//DroidAITech/xbot_simulator/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>yocs_cmd_vel_mux</run_depend>
<!--  <run_depend>create_gazebo_plugins</run_depend> disable irobot create due to the compile error in plugin-->
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xbot_bringup</run_depend>
  <run_depend>xbot_description</run_depend>
  <run_depend>xbot_navi</run_depend>
  <run_depend>xacro</run_depend>
</package>
