<package>
  <name>xbot_simulator</name>
  <version>3.2.3</version>
  <description>Catkin metapackage for the xbot_simulator stack</description>
  <maintainer email="wangpeng@droid.ac.cn">Roc</maintainer>
  <author email="chuanxu@iscas.ac.cn">Chuanxu An</author>
  <license>BSD</license>
  <url type="repository">https://github.com/DroidAITech/xbot_simulator</url>
  <url type="bugtracker">https://github.com/DroidAITech/xbot_simulator/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xbot_gazebo</run_depend>
  <run_depend>xbot_stage</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
